classDiagram
direction LR

class Product{
    +int product_id
    +String name
    +String description
    +double price
    +String unit
    +String image
    +int discount
    +boolean available
    +int brand_id
    +int category_id
}

class Review{
    +int review_id
    +int user_id
    +int product_id
    +int rating
    +String comment
}

class Category{
    +int category_id
    +String name
}

class Brand{
    +int brand_id
    +String name
}

class User{
    +int user_id
    +String username
    +String email
    +String password
}

class Cart{
    +int cart_id
    +int user_id
}

class CartItem{
    +int cart_item_id
    +int cart_id
    +int product_id
    +int quantity
}

class Order{
    +int order_id
    +int user_id
    +int order_status_id
    +double total_price
}

class OrderItem{
    +int order_item_id
    +int order_id
    +int product_id
    +int quantity
}

class OrderStatus{
    +int order_status_id
    +String name
}

Brand "1" <-- "0..*" Product : brand_id
Category "1" <-- "0..*" Product : category_id
User "1" <-- "0..*" Review : user_id
Product "1" <-- "0..*" Review : product_id
User "1" <-- "0..*" Cart : user_id
Cart "1" *-- "0..*" CartItem : items
Product "1" <-- "0..*" CartItem : product_id
User "1" <-- "0..*" Order : user_id
OrderStatus "1" <-- "0..*" Order : order_status_id
Order "1" *-- "1..*" OrderItem : items
Product "1" <-- "0..*" OrderItem : product_id
